--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <div class="min-content">
+    <div class="main-content">
         {{>header}}
+        <p>This site is created by Eslam Ahmed, it uses data from mapbox and weather stack apis.</p>
         <img src="./img/me.png" class="portrait" alt="">
     </div>
     {{>footer}}
